3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Fix bug #1256173 (Magic drain not exploding head):
server/spell_effect.c: Prevent mana transfer to/from caster himself; also
   create fireball for overcharges resulting from sucking mana.
Andreas Kirschbaum 2005-08-30

Fix bug #1059537 (Chainmail mutations):
common/loader.l: Remove code that "fixes" broken item names by removing a
   leading material name. This effectively renames "mithril chainmails" into
   "chainmails".
common/loader.c: Rebuilt.
Andreas Kirschbaum 2005-08-29

Fix player weapon speed/speed.  There are a few bugs this fixes:
1) when player hit something, a has_hit field was set to true, to denote
   they hit something and to use weapon speed. However, this was only
   cleared when player issued a command.  Thus, if you are running 
   and hit something, you'd continue at weapon_speed pace until you
   needed to change direction.
2) Because has_hit was used, this basically put in a 1 tick lag - you'd hit
   something, but not until objects were processed and speed given would
   you get your extra speed.  Likewise, after you killed something, you'd
   get your burst of speed for the next tick also.
--
server/main.c: Clear has_hit, change function to only do bounds checking,
   not actually do weapon_speed adjustments.
server/player.c:  Give player speed boost when they hit something.
MSW 2005-08-28

Add patch #1274385 by Kevin Rudat to make crossedit draw floors on tiles with
items.
crossedit/CrEdit.c: Add call to update_position() in UpdatePosition().
Andreas Kirschbaum 2005-08-28

Add patch #1271417 by Kevin Rudat to stop crossedit losing regions. Patch is